# speis-inveiders-2026

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt
blueprint/: ScreenMockUp.pptx
include/: gameplay.h  globals.h  types.h
space invaders/: spaceInvaders-NoSDL&Windows.cpp  spaceInvaders-prototypeNoSDL.cpp
src/: alien.cpp  barriere.cpp  credits.cpp  gameOver.cpp  gameplay.h  levelUP.cpp  main.cpp  main_menu.cpp  options.cpp  pause_menu.cpp  play.cpp  player.cpp  player_movement.cpp  player_shot.cpp  printGame.cpp  reset_status_play.cpp  stampaInt.cpp  utility.cpp
